@@ -7,6 +7,13 @@ L["ChangeLog"] = [[
 <html>
 <body>
 <p>
+<lime>2016/07/01 v62 : </lime>
+</p><br/>
+<p>
+    1. 你可以调整任务列表的大小来修复移动任务列表后，无法显示任务的问题。
+</p>
+<br/><br/>
+<p>
 <lime>2016/06/30 v61 : </lime>
 </p><br/>
 <p>
