@@ -7,6 +7,13 @@ L["ChangeLog"] = [[
 <html>
 <body>
 <p>
+<lime>2016/07/01 v62 : </lime>
+</p><br/>
+<p>
+    1. 你可以調整任務列表的大小來修復移動任務列表后，無法顯示任務的問題。
+</p>
+<br/><br/>
+<p>
 <lime>2016/06/30 v61 : </lime>
 </p><br/>
 <p>
